--- a/public/css/home/fonts/icomoon/icomoon.css
+++ b/public/css/home/fonts/icomoon/icomoon.css
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'roxine-font-icon';
-  src: url("f../../../fonts/roxine-font-icon/roxine-font-icon.eot");
+  src: url("../../../fonts/roxine-font-icon/roxine-font-icon.eot");
   src: url("../../../fonts/roxine-font-icon/roxine-font-icon.eot?#iefix") format("embedded-opentype"), url("../../../fonts/roxine-font-icon/roxine-font-icon.woff") format("woff"), url("../../../fonts/roxine-font-icon/roxine-font-icon.ttf") format("truetype"), url("../../../fonts/roxine-font-icon/roxine-font-icon.svg#roxine-font-icon") format("svg");
   font-weight: normal;
   font-style: normal; }
