feat: edit pages, add project page

--- a/public/css/home/construction.css
+++ b/public/css/home/construction.css
@@ -145,7 +145,7 @@ Version: 		1.0.0
  *
  * bootstrap-slider is released under the MIT License
  * Copyright (c) 2017 Kyle Kemp, Rohit Kalkur, and contributors
- * 
+ *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
  * files (the "Software"), to deal in the Software without
@@ -154,10 +154,10 @@ Version: 		1.0.0
  * copies of the Software, and to permit persons to whom the
  * Software is furnished to do so, subject to the following
  * conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be
  * included in all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
@@ -4339,7 +4339,6 @@ em.state-invalid {
   font-size: 0.875rem;
   line-height: 1.2;
   display: block;
-  text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 0.9375rem;
   font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -4993,10 +4992,10 @@ pre {
               transform: translate(0, 0); }
     .ico-box:hover .icon,
     .ico-box:hover .content-title {
-      color: #f57f17; }
+      color: #FFBC42; }
       .ico-box:hover .icon a,
       .ico-box:hover .content-title a {
-        color: #f57f17; }
+        color: #FFBC42; }
   .ico-box.dark-hover:hover .icon,
   .ico-box.dark-hover:hover .content-title {
     color: #fff; }
@@ -5057,7 +5056,6 @@ pre {
     .icon-v1 .ico-box {
       padding: 0; } }
   .icon-v1 .ico-box .content-title {
-    text-transform: capitalize;
     letter-spacing: 0;
     padding-left: 1.875rem; }
   .icon-v1 .ico-box .icon {
@@ -5638,18 +5636,18 @@ pre {
        -o-transition-delay: .4s;
           transition-delay: .4s; }
 
-.grayscale-effect img, .logo-container .owl-carousel .owl-item img {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-transition: -webkit-filter linear .3s;
-  transition: -webkit-filter linear .3s;
-  -o-transition: filter linear .3s;
-  transition: filter linear .3s;
-  transition: filter linear .3s, -webkit-filter linear .3s; }
+/*.grayscale-effect img, .logo-container .owl-carousel .owl-item img {*/
+/*  -webkit-filter: grayscale(100%);*/
+/*  filter: grayscale(100%);*/
+/*  -webkit-transition: -webkit-filter linear .3s;*/
+/*  transition: -webkit-filter linear .3s;*/
+/*  -o-transition: filter linear .3s;*/
+/*  transition: filter linear .3s;*/
+/*  transition: filter linear .3s, -webkit-filter linear .3s; }*/
 
-.grayscale-effect:hover img, .logo-container .owl-carousel .owl-item:hover img {
-  -webkit-filter: grayscale(0);
-  filter: grayscale(0); }
+/*.grayscale-effect:hover img, .logo-container .owl-carousel .owl-item:hover img {*/
+/*  -webkit-filter: grayscale(0);*/
+/*  filter: grayscale(0); }*/
 
 .reverse-grayscale-effect img {
   -webkit-filter: grayscale(0);
